index.html updat

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,6 @@
 {% block app_content %}
     <img src="{{url_for('static', filename='PokemonLogo.png')}}" alt="PokemonLogo">
     <h1>This is the exmaple pokemon website (backend only)!</h1>
-    <h3>Currently <code>Gen I</code> to <code>Gen VII</code> is in the database</h3>
-    <h3>Currently it can show Name, Number and Types</h3>
+    <h4>Currently <code>Gen I</code> to <code>Gen VIII</code> is in the database</h4>
+    <h4>Currently it can show Name, Number and Types</h4>
 {% endblock %}
