--- a/app/templates/pokemon.html
+++ b/app/templates/pokemon.html
@@ -9,6 +9,7 @@
     {% else %}
         <img src="https://github.com/fanzeyi/pokemon.json/blob/master/images/{{ dex_number }}.png?raw=true" alt="{{ name }}">
     {% endif %}
+    <div></div>
     {% for type in types %}
         {% if type == 'grass' %}
             <button type="button" class="btn btn-success">{{ type }}</button>
@@ -18,6 +19,8 @@
             <button type="button" class="btn btn-info">{{ type }}</button>
         {% elif type == 'water' %}
             <button type="button" class="btn btn-primary">{{ type }}</button>
+        {% elif type == 'water' %}
+            <button type="button" class="btn btn-warning">{{ type }}</button>
         {% else %}
             <button type="button" class="btn btn-default">{{ type }}</button>
         {% endif %}
