--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('index') }}">Home</a></li>
-                    <li><a href="{{ url_for('explore') }}">Explore Pokemon</a></li>
+                    <li><a href="{{ url_for('search') }}">Search Pokemon</a></li>
                 </ul>
             </div>
         </div>
