--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block app_content %}
     <img src="{{url_for('static', filename='PokemonLogo.png')}}" alt="PokemonLogo">
-    <h1>This is the exmaple pokemon website (backend only)!</h1>
+    <h1>This is the example pokemon website (backend only)!</h1>
     <h4>Currently <code>Gen I</code> to <code>Gen VIII</code> is in the database</h4>
-    <h4>Currently it can show Name, Number and Types</h4>
+    <h4>Currently shows Name, Dex Number and Types</h4>
 {% endblock %}
