--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -2,8 +2,8 @@
 
 {% block app_content %}
     <img src="{{url_for('static', filename='PokemonLogo.png')}}" alt="PokemonLogo">
-    <h1>Search for a Pokemon</h1>
-    <h3>Enter a Pokemon Name or Dex Number</h3>
+    <h1>Explore Pokemon</h1>
+    <h3>Browse Pokemon</h3>
     <form method="POST">
         <div class = "form-group"></div>
             <input type="text" name="edata">
