--- a/app/templates/pokemon.html
+++ b/app/templates/pokemon.html
@@ -23,7 +23,7 @@
             <button type="button" class="btn btn-info">{{ type }}</button>
         {% elif type == 'water' %}
             <button type="button" class="btn btn-primary">{{ type }}</button>
-        {% elif type == 'water' %}
+        {% elif type == 'electric' %}
             <button type="button" class="btn btn-warning">{{ type }}</button>
         {% else %}
             <button type="button" class="btn btn-default">{{ type }}</button>
