explore page fix

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('index') }}">Home</a></li>
                     <li><a href="{{ url_for('search') }}">Search Pokemon</a></li>
+                    <li><a href="{{ url_for('explore') }}">Explore Pokemon</a></li>
                 </ul>
             </div>
         </div>
