--- a/app/templates/explore.html
+++ b/app/templates/explore.html
@@ -11,11 +11,13 @@
         </div>
     </form>
     {% for pokemon in random_pokemon_dict %}
-        <div class="panel panel-default">
-            <div class="panel-body">
-                {{ random_pokemon_dict[pokemon]["Name"] }} #{{ random_pokemon_dict[pokemon]["Dex"] }}
+        <div class="card border-primary mb-3" style="width: 18rem;">
+            <img class="card-img-top" src="https://github.com/fanzeyi/pokemon.json/blob/master/thumbnails/{{ random_pokemon_dict[pokemon]["Dex"] }}.png?raw=true" alt="{{ name }}">
+            <div class="card-body">
+              <h5 class="card-title">{{ random_pokemon_dict[pokemon]["Name"] }} #{{ random_pokemon_dict[pokemon]["Dex"] }}</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Veiw this Pokemon</a>
             </div>
-            <div class="panel-footer">Panel footer</div>
         </div>
     {% endfor %}
 {% endblock %}
