Starting Fixing Explore Page

--- a/app/templates/explore.html
+++ b/app/templates/explore.html
@@ -16,7 +16,7 @@
             <div class="card-body">
               <h5 class="card-title">{{ random_pokemon_dict[pokemon]["Name"] }} #{{ random_pokemon_dict[pokemon]["Dex"] }}</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Veiw this Pokemon</a>
+              <a href="{{url_for('pokemon')}}" class="btn btn-primary">Veiw this Pokemon</a>
             </div>
         </div>
     {% endfor %}
