--- a/app/static/styles/typebuttons.css
+++ b/app/static/styles/typebuttons.css
@@ -1,6 +1,4 @@
-.btn.btn- {
-    border-radius: 0.125;
-    background:#7289da;
-    border-color: #7289da;
-    color: white;
+.btn.btn-bug {
+    background:#a6b91a;
+    border-color: #a6b91a;
 }
