--- a/app/templates/pokemon.html
+++ b/app/templates/pokemon.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block styles %}
+{{super()}}
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/typebuttons.css') }}">
+{% endblock %}
+
 {% block app_content %}
     {% if leng == 1 %}
         <h1 class="card-title pricing-card-title">{{ name }} <small class="text-muted">#00{{ dex_number }}</small></h1>
@@ -15,18 +20,6 @@
     <h3>Types</h3>
     <div></div>
     {% for type in types %}
-        {% if type == 'grass' %}
-            <button type="button" class="btn btn-success">{{ type }}</button>
-        {% elif type == 'fire' %}
-            <button type="button" class="btn btn-warning">{{ type }}</button>
-        {% elif type == 'flying' %}
-            <button type="button" class="btn btn-info">{{ type }}</button>
-        {% elif type == 'water' %}
-            <button type="button" class="btn btn-primary">{{ type }}</button>
-        {% elif type == 'electric' %}
-            <button type="button" class="btn btn-warning">{{ type }}</button>
-        {% else %}
-            <button type="button" class="btn btn-default">{{ type }}</button>
-        {% endif %}
+        <button type="button" class="btn btn-primary btn-{{ type }}">{{ type }}</button>
     {% endfor %}
 {% endblock %}
